Add parallel exec for genmodels